k8s/eks/08-backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: devboard-be
  namespace: devboard-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devboard-be
  template:
    metadata:
      labels:
        app: devboard-be
    spec:
      containers:
      - name: devboard-backend
        image: trainwithshubham/devboard-backend:3fe8939
        ports:
        - containerPort: 8080
        resources:
          requests: # minimum resource requirement
            cpu: 10m # 0.01 Cores of CPU
            memory: 64Mi # 67 Mb of RAM

          limits: # maximum resource requirement
            cpu: 250m # 0.25 Cores of CPU
            memory: 128Mi
