k8s/eks/07-postgres-service.yml
kind: Service
apiVersion: v1
metadata:
  name: postgres
  namespace: devboard-ns

spec:
  clusterIP: None
  selector:
    app: devboard-postgres

  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
