k8s/eks/09-backend-service.yml
kind: Service
apiVersion: v1
metadata:
  name: backend
  namespace: devboard-ns

spec:
  selector:
    app: devboard-be

  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080 # container port
